@@ -722,6 +722,7 @@ Magnus Kessler
 Lawrence Kesteloot
 Vivek Khera
 Dhiru Kholia
+Akshit Khurana
 Mads Kiilerich
 Jason Killen
 Jan Kim
